# ckan-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yaml  pyproject.toml
.github/workflows/: ci.yml
template/: .ckan-version.jinja  .dockerignore  README.md.jinja  pyproject.toml.jinja
template/catalog-template/: README.md  catalog.yaml
template/compose-dev/: docker-compose.yml
template/compose-dev/config/: .global-env.jinja
template/compose-dev/config/ckan/: .env
template/compose-dev/services/ckan/: ckan.yaml
template/compose-dev/services/ckan-workers/: ckan-worker-bulk.yaml  ckan-worker-default.yaml  ckan-worker-priority.yaml
template/compose-dev/services/ckan/image/: docker-entrypoint.sh  prerun.py
